# legopython

./: .gitignore  AWSSSOLogin.docx  LICENSE  README.md  __init__.py  __metadata__.py  setup.cfg  setup.py
documentation/: LegoPython.psd
internalapps/: README.md  __init__.py  example.py
legopython/: __init__.py  lp_api.py  lp_awssession.py  lp_dbsecrets.py  lp_dynamodb.py  lp_general.py  lp_interface.py  lp_logging.py  lp_postgresql.py  lp_s3.py  lp_secretsmanager.py  lp_settings.py  lp_sql.py
modules/: lp_dynamodb.py  lp_interface.py  lp_logging.py  lp_secretsmanager.py
scripts/: README.md
utilities/: pip_update.py  requirements.txt
